# hyprink

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  commit_msg.tmp  in-memoria.db  install.sh  justfile  uninstall.sh
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  corelog_features.md  hyprcore_fragments.md  kitchn_architecture.md  kitchn_features.md  kitchn_log_features.md  kitchn_logging_strategy.md  project_overview.md  suggested_commands.md  task_completion.md
assets/defaults/: presets.conf
assets/examples/: example.fpkg
assets/examples/config/: dictionary.toml  icons.toml  layout.toml  theme.toml
assets/examples/cpp/: Makefile  main.cpp
assets/examples/fragments/: colors_test.frag  waybar.frag
assets/examples/python/: main.py
assets/fragments/: brave.frag  fish.frag  python.frag  stylus.frag
assets/ingredients/: fish.ing  fuzzel.ing  glow.ing  godot.ing  gtk-settings.ing  gtk-theme.ing  hyprland-programs.ing  python.ing  qt-theme.ing  starship.ing  test_fail.ing  wired.ing  yazi.ing  zellij.ing
assets/templates/: brave.tpl  fish.tpl  fuzzel.tpl  glow.tpl  godot.tpl  gtk-settings.tpl  gtk-theme.tpl  hyprland-programs.tpl  micro.tpl  python.tpl  qt-theme.tpl  sessions.tpl  starship.tpl  stylus.tpl  test_fail.tpl  wired.tpl  yazi.tpl  zellij.tpl
benches/: config_bench.rs  db_bench.rs  pack_bench.rs
crates/core_lib/: Cargo.toml
crates/core_lib/src/: config.rs  factory.rs
crates/corelog/: Cargo.toml
crates/corelog/src/: main.rs
crates/hcore_cli/: Cargo.toml
crates/hcore_cli/benches/: pack_bench.rs
crates/hcore_cli/src/: main.rs  packager.rs
crates/hcore_cli/tests/: cli_tests.rs
crates/hcore_ffi/: cbindgen.toml
crates/hcore_lib/: Cargo.toml  build.rs  cbindgen.toml
crates/hcore_lib/src/: ffi.rs  lib.rs  processor.rs
crates/hcore_log/: Cargo.toml
crates/hcore_log/src/: main.rs
crates/hi_cli/: Cargo.toml
crates/hi_cli/benches/: db_bench.rs  pack_bench.rs
crates/hi_cli/src/: args.rs  cli_config.rs  logging.rs  main.rs
crates/hi_cli/src/commands/: add.rs  apply.rs  compile.rs  list.rs  mod.rs  pack.rs
crates/hi_cli/tests/: cli_tests.rs
crates/hi_core/: Cargo.toml  cbindgen.toml
crates/hi_core/benches/: config_bench.rs
crates/hi_core/src/: config.rs  lib.rs  logger.rs  processor.rs  template.rs
crates/hi_core/tests/: config_tests.rs  db_tests.rs  factory_tests.rs  processor_tests.rs  template_tests.rs
crates/hi_core/tests/common/: mod.rs
crates/hi_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/hi_ffi/src/: lib.rs
crates/hyprcore/: Cargo.toml
crates/hyprcore/benches/: pack_bench.rs  render_bench.rs
crates/hyprcore/src/: fragment.rs  lib.rs  main.rs
crates/hyprcore/tests/: cli_tests.rs
crates/k-lib/src/: config.rs  factory.rs  logger.rs  processor.rs
crates/k-lib/tests/: processor_tests.rs
crates/k-log/src/: cli.rs  main.rs
crates/k-log/src/commands/: cleanup.rs  log.rs  mod.rs  stats.rs
crates/kitchn_cli/: Cargo.toml
crates/kitchn_cli/benches/: db_bench.rs  pack_bench.rs  render_bench.rs
crates/kitchn_cli/src/: args.rs  cli_config.rs  main.rs  watcher.rs
crates/kitchn_cli/src/commands/: cook.rs  mod.rs  stock.rs  wrap.rs
crates/kitchn_cli/tests/: cli_tests.rs
crates/kitchn_ffi/: Cargo.toml  cbindgen.toml
crates/kitchn_ffi/src/: lib.rs
crates/kitchn_lib/: Cargo.toml
crates/kitchn_lib/benches/: config_bench.rs  tera_bench.rs
crates/kitchn_lib/src/: config.rs  db.rs  defaults.toml  factory.rs  ingredient.rs  lib.rs  logger.rs  packager.rs  processor.rs
crates/kitchn_lib/tests/: db_tests.rs  processor_tests.rs
crates/kitchn_log/: Cargo.toml
crates/kitchn_log/src/: main.rs
dev/scripts/: .env
dev/scripts/info/: docs.sh
dev/scripts/lib/: log.sh
include/: hcore.h  hyprink.h  kitchn.h
src/: config.rs  db.rs  factory.rs  lib.rs  logger.rs  packager.rs
src/cli/: args.rs  cli_config.rs  logging.rs  mod.rs
src/cli/commands/: add.rs  apply.rs  compile.rs  list.rs  mod.rs  pack.rs
