[package]
name = "hcore_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hyprcore"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcore_lib = { path = "../hcore_lib" }
clap = { version = "4.4", features = ["derive"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
directories = "5.0"
colored = "2.0"
zip = "2.2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"

[[bench]]
name = "pack_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false
