[package]
name = "hi_core"
version = "0.1.0"
edition = "2024"

[lib]
# crate-type removed to default to rlib

[dependencies]
log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
directories = "5.0.1"
dirs-next = "2.0"
colored = "2.2.0"
thiserror = "2.0.3"
lazy_static = "1.5.0"
zip = "2.2.2"
tera = "1.20.1"
anyhow = "1.0.100"
chrono = "0.4.39"
libc = "0.2.169"
bincode = { version = "2.0.1", features = ["serde"] }
hyprlog = { git = "ssh://git@github.com/ryugen-io/hyprlog.git", branch = "main", default-features = false }

[build-dependencies]

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "tera_bench"
harness = false
